--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
                 <li class="navigation-links__list-item"><a href="/" class="navigation-links__link">Home</a></li>
                 <li class="navigation-links__list-item"><a href="#about" class="navigation-links__link">About us</a></li>
                 <li class="navigation-links__list-item"><a href="#about" class="navigation-links__link">Products</a></li>
-                <li class="navigation-links__list-item"><a href="#about" class="navigation-links__link">Clients</a></li>
+                <li class="navigation-links__list-item"><a href="#blog" class="navigation-links__link">Blog</a></li>
                 <li class="navigation-links__list-item"><a href="#about" class="navigation-links__link">Contact</a></li>
             </ul>
         </div>
@@ -53,7 +53,7 @@
                 <li><a href="/" class="navigation-links__link">Home</a></li>
                 <li><a href="#about" class="navigation-links__link">About us</a></li>
                 <li><a href="#about" class="navigation-links__link">Products</a></li>
-                <li><a href="#about" class="navigation-links__link">Clients</a></li>
+                <li><a href="#blog" class="navigation-links__link">Blog</a></li>
                 <li><a href="#about" class="navigation-links__link">Contact</a></li>
             </ul>
         </div>
@@ -95,17 +95,27 @@
     <!-- endbuild -->
 
     <!-- build:js(.) scripts/vendor.js -->
-    <script src="/bower_components/angular/angular.min.js"></script>
+    <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="/bower_components/angular-route/angular-route.min.js"></script>
+    <script src="/bower_components/angular-animate/angular-animate.js"></script>
+    <script src="/bower_components/angular-route/angular-route.js"></script>
+    <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="/bower_components/angular-resource/angular-resource.js"></script>
+    <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <!--<script src="/bower_components/firebase/firebase-debug.js"></script>-->
+    <!--<script src="/bower_components/angularfire/dist/angularfire.min.js"></script>-->
+    <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/controllers/blog.js"></script>
+    <script src="scripts/controllers/auth.js"></script>
+    <script src="scripts/controllers/login.js"></script>
     <!-- endbuild -->
 </body>
 </html>
