renamed files, moved firebase in to its own service. Changed folder structure

--- a/app/index.html
+++ b/app/index.html
@@ -114,9 +114,11 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/HomeController.js"></script>
     <script src="scripts/controllers/BlogController.js"></script>
-
+    <script src="scripts/controllers/AdminController.js"></script>
     <script src="scripts/controllers/LoginController.js"></script>
+
     <script src="scripts/services/AuthenticationService.js"></script>
+    <script src="scripts/services/FirebaseService.js"></script>
     <!-- endbuild -->
 </body>
 </html>
