added contact page and email service

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 
     <div class="header">
         <div class="header__header-container">
-            <img class="header-container__logo" src="images/logo.png">
+            <img class="header-container__logo" src="images/logo.png" width="300" height="96">
             <i class="fa fa-facebook-square fa-3x facebook"></i>
             <i class="fa fa-twitter-square fa-3x twitter"></i>
             <i class="fa fa-youtube-square fa-3x youtube"></i>
@@ -39,7 +39,7 @@
                 <li class="navigation-links__list-item"><a href="#about" class="navigation-links__link">About us</a></li>
                 <li class="navigation-links__list-item"><a href="#about" class="navigation-links__link">Products</a></li>
                 <li class="navigation-links__list-item"><a href="#blog" class="navigation-links__link">Blog</a></li>
-                <li class="navigation-links__list-item"><a href="#about" class="navigation-links__link">Contact</a></li>
+                <li class="navigation-links__list-item"><a href="#contact" class="navigation-links__link">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -54,7 +54,7 @@
                 <li><a href="#about" class="navigation-links__link">About us</a></li>
                 <li><a href="#about" class="navigation-links__link">Products</a></li>
                 <li><a href="#blog" class="navigation-links__link">Blog</a></li>
-                <li><a href="#about" class="navigation-links__link">Contact</a></li>
+                <li><a href="#contact" class="navigation-links__link">Contact</a></li>
             </ul>
         </div>
 
@@ -114,9 +114,11 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/HomeController.js"></script>
     <script src="scripts/controllers/BlogController.js"></script>
+    <script src="scripts/controllers/ContactController.js"></script>
     <script src="scripts/controllers/AdminController.js"></script>
     <script src="scripts/controllers/LoginController.js"></script>
 
+    <script src="scripts/services/EmailService.js"></script>
     <script src="scripts/services/AuthenticationService.js"></script>
     <script src="scripts/services/FirebaseService.js"></script>
     <!-- endbuild -->
