--- a/app/index.html
+++ b/app/index.html
@@ -14,11 +14,14 @@
       <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/pages/home.css">
     <link rel="stylesheet" href="styles/pages/about.css">
+    <link rel="stylesheet" href="styles/pages/blog.css">
+    <link rel="stylesheet" href="styles/pages/contact.css">
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/font-awesome.css">
     <link rel="stylesheet" href="styles/bootstrap.css" >
+    <link rel="stylesheet" href="styles/progress-bars.css" >
       <!--<link rel="stylesheet" href="/dist/styles/main.css" >-->
       <!-- endbuild -->
   </head>
@@ -37,7 +40,7 @@
             <ul class="header-container__navigation-links">
                 <li class="navigation-links__list-item"><a href="/" class="navigation-links__link">Home</a></li>
                 <li class="navigation-links__list-item"><a href="#about" class="navigation-links__link">About us</a></li>
-                <li class="navigation-links__list-item"><a href="#about" class="navigation-links__link">Products</a></li>
+                <li class="navigation-links__list-item"><a href="#products" class="navigation-links__link">Products</a></li>
                 <li class="navigation-links__list-item"><a href="#blog" class="navigation-links__link">Blog</a></li>
                 <li class="navigation-links__list-item"><a href="#contact" class="navigation-links__link">Contact</a></li>
             </ul>
@@ -52,7 +55,7 @@
             <ul>
                 <li><a href="/" class="navigation-links__link">Home</a></li>
                 <li><a href="#about" class="navigation-links__link">About us</a></li>
-                <li><a href="#about" class="navigation-links__link">Products</a></li>
+                <li><a href="#products" class="navigation-links__link">Products</a></li>
                 <li><a href="#blog" class="navigation-links__link">Blog</a></li>
                 <li><a href="#contact" class="navigation-links__link">Contact</a></li>
             </ul>
@@ -102,6 +105,9 @@
     <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="/bower_components/angular-resource/angular-resource.js"></script>
     <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="/bower_components/angular-loading-bar/build/loading-bar.js"></script>
+    <!--<script src="/bower_components/spin.js/spin.js"></script>-->
+    <!--<script src="/bower_components/angular-spinner/angular-spinner.js"></script>-->
     <!--<script src="/bower_components/firebase/firebase-debug.js"></script>-->
     <!--<script src="/bower_components/angularfire/dist/angularfire.min.js"></script>-->
     <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
@@ -117,6 +123,7 @@
     <script src="scripts/controllers/ContactController.js"></script>
     <script src="scripts/controllers/AdminController.js"></script>
     <script src="scripts/controllers/LoginController.js"></script>
+    <script src="scripts/controllers/ProductsController.js"></script>
 
     <script src="scripts/services/EmailService.js"></script>
     <script src="scripts/services/AuthenticationService.js"></script>
