--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,6 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/font-awesome.css">
     <link rel="stylesheet" href="styles/bootstrap.css" >
-    <link rel="stylesheet" href="styles/progress-bars.css" >
       <!--<link rel="stylesheet" href="/dist/styles/main.css" >-->
       <!-- endbuild -->
   </head>
@@ -34,9 +33,9 @@
     <div class="header">
         <div class="header__header-container">
             <img class="header-container__logo" src="images/logo.png" width="300" height="96">
-            <i class="fa fa-facebook-square fa-3x facebook"></i>
-            <i class="fa fa-twitter-square fa-3x twitter"></i>
-            <i class="fa fa-youtube-square fa-3x youtube"></i>
+            <a href="https://www.facebook.com/AbingtonComputerElite?fref=ts" target="_blank"><i class="fa fa-facebook circle fa-3x"></i></a>
+            <a href="https://twitter.com/TrngSolutions" target="_blank"><i class="fa fa-twitter circle fa-3x"></i></a>
+                <a href="https://www.youtube.com/user/MymoTraining" target="_blank"><i class="fa fa-youtube circle fa-3x"></i></a>
             <ul class="header-container__navigation-links">
                 <li class="navigation-links__list-item"><a href="/" class="navigation-links__link">Home</a></li>
                 <li class="navigation-links__list-item"><a href="#about" class="navigation-links__link">About us</a></li>
@@ -62,7 +61,7 @@
         </div>
 
         <div class="footer__container">
-            <span class="container__heading">Receive our newsletter</span><br />
+            <span class="container__heading">Receive our newsletter</span>
             <label for="name">Your name</label><br />
             <input id="name" type="text"><br />
             <label for="email">Your email</label><br />
@@ -77,7 +76,6 @@
                 <span class="icon-text">07889 603 850</span>
         </div>
     </div>
-
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -99,7 +97,7 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <script src="/bower_components/angular/angular.js"></script>
-    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
     <script src="/bower_components/angular-route/angular-route.js"></script>
     <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
