--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
       <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/pages/home.css">
     <link rel="stylesheet" href="styles/pages/about.css">
+    <link rel="stylesheet" href="styles/pages/admin.css">
     <link rel="stylesheet" href="styles/pages/blog.css">
     <link rel="stylesheet" href="styles/pages/contact.css">
     <link rel="stylesheet" href="styles/footer.css">
