--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
 
     <div class="header">
         <div class="header__header-container">
-            <img class="header-container__logo" src="images/logo.png" width="300" height="96">
+            <img class="header-container__logo" src="https://s3-eu-west-1.amazonaws.com/ace-training-services/assets/logo.png" width="300" height="96">
             <a href="https://www.facebook.com/AbingtonComputerElite?fref=ts" target="_blank"><i class="fa fa-facebook circle fa-3x"></i></a>
             <a href="https://twitter.com/TrngSolutions" target="_blank"><i class="fa fa-twitter circle fa-3x"></i></a>
                 <a href="https://www.youtube.com/user/MymoTraining" target="_blank"><i class="fa fa-youtube circle fa-3x"></i></a>
