added some responsiveness

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8">
     <title ng-bind="title"></title>
     <meta name="description" content="">
+    <!--<meta name="viewport" content="initial-scale=1, maximum-scale=1">-->
+    <!--<meta name="viewport" content="width=device-width">-->
     <meta name="viewport" content="width=device-width">
-      <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
       <!-- build:css(.) styles/vendor.css -->
       <!-- bower:css -->
       <!-- endbower -->
@@ -33,17 +35,34 @@
 
     <div class="header">
         <div class="header__header-container">
-            <img class="header-container__logo" src="https://s3-eu-west-1.amazonaws.com/ace-training-services/assets/logo.png" width="300" height="96">
-            <a href="https://www.facebook.com/AbingtonComputerElite?fref=ts" target="_blank"><i class="fa fa-facebook circle fa-3x"></i></a>
-            <a href="https://twitter.com/TrngSolutions" target="_blank"><i class="fa fa-twitter circle fa-3x"></i></a>
-                <a href="https://www.youtube.com/user/MymoTraining" target="_blank"><i class="fa fa-youtube circle fa-3x"></i></a>
-            <ul class="header-container__navigation-links">
+
+          <img class="header-container__logo" src="https://s3-eu-west-1.amazonaws.com/ace-training-services/assets/logo.png" width="300" height="96">
+
+          <a href="https://www.facebook.com/AbingtonComputerElite?fref=ts" target="_blank"><i class="fa fa-facebook circle fa-2x"></i></a>
+            <a href="https://twitter.com/TrngSolutions" target="_blank"><i class="fa fa-twitter circle fa-2x"></i></a>
+                <a href="https://www.youtube.com/user/MymoTraining" target="_blank"><i class="fa fa-youtube circle fa-2x"></i></a>
+
+          <ul class="header-container__navigation-links">
                 <li class="navigation-links__list-item"><a href="/" class="navigation-links__link">Home</a></li>
                 <li class="navigation-links__list-item"><a href="#about" class="navigation-links__link">About us</a></li>
                 <li class="navigation-links__list-item"><a href="#products" class="navigation-links__link">Products</a></li>
                 <li class="navigation-links__list-item"><a href="#blog" class="navigation-links__link">Blog</a></li>
                 <li class="navigation-links__list-item"><a href="#contact" class="navigation-links__link">Contact</a></li>
             </ul>
+
+          <div class="header-container__nav-bar" ng-controller="NavBarController">
+                <button class="btn-navbar" ng-click="isCollapsed = !isCollapsed"><i class="fa fa-bars"></i></button>
+
+                <div class="nav-collapse" collapse="isCollapsed">
+                  <ul class="nav">
+                    <li ng-click="isCollapsed = true"><a href="/">Home</a></li>
+                    <li ng-click="isCollapsed = true"><a href="#about">About us</a></li>
+                    <li ng-click="isCollapsed = true"><a href="#products">Products</a></li>
+                    <li ng-click="isCollapsed = true"><a href="#blog">Blog</a></li>
+                    <li ng-click="isCollapsed = true"><a href="#contact">Contact</a></li>
+                  </ul>
+                </div>
+          </div>
         </div>
     </div>
 
@@ -73,7 +92,7 @@
             <span class="container__heading">Contact</span>
                 <i class="fa fa-phone-square fa-3x"></i>
                 <span class="icon-text">info@cumbriatrainingservices.co.uk</span>
-                <i class="fa fa-send fa-3x"></i>
+                <i class="fa fa-send fa-3x email-icon"></i>
                 <span class="icon-text">07889 603 850</span>
         </div>
     </div>
@@ -124,6 +143,7 @@
     <script src="scripts/controllers/AdminController.js"></script>
     <script src="scripts/controllers/LoginController.js"></script>
     <script src="scripts/controllers/ProductsController.js"></script>
+    <script src="scripts/controllers/NavBarController.js"></script>
 
     <script src="scripts/services/EmailService.js"></script>
     <script src="scripts/services/AuthenticationService.js"></script>
